[backend] chore(chaining): fixed some code quality issues and simplified some tests